...
            "state": "translated",
            "value": "OK"
          }
        }
      }
    },
    "Undo completion": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Undo completion"
...
            "state": "translated",
            "value": "記録を追加"
          }
        }
      }
    },
    "Edit tracker": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit Item"
...
            "state": "translated",
            "value": "期間内の変化"
          }
        }
      }
    },
    "Target": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Target"
...
            "state": "translated",
            "value": "完了カレンダー"
          }
        }
      }
    },
    "Previous month": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Previous month"
...
            "state": "translated",
            "value": "最新の写真"
          }
        }
      }
    },
    "List": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "List"
          }
...
            "state": "translated",
            "value": "目前值／目標值"
          }
        }
      }
    },
    "Top left": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Top left"
...
            "state": "translated",
            "value": "左上"
          }
        }
      }
    },
    "Top right": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Top right"
...
            "state": "translated",
            "value": "右上"
          }
        }
      }
    },
    "Bottom left": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Bottom left"
...
            "state": "translated",
            "value": "左下"
          }
        }
      }
    },
    "Bottom right": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Bottom right"
...
            "state": "translated",
            "value": "右下"
          }
        }
      }
    },
    "Hidden": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Hidden"
...
